--- a/service/pom.xml
+++ b/service/pom.xml
@@ -13,6 +13,7 @@
         <version>1.3.5.RELEASE</version>
     </parent>
 
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,6 +54,8 @@
     </dependencies>
 
     <properties>
+        <start-class>meleeauthority.Application</start-class>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
     </properties>
 
